--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "body-parser": "1.20.2",
     "browserslist": "4.23.0",
     "compression": "1.7.4",
@@ -23,6 +24,5 @@
     "helmet": "7.1.0",
     "mongoose": "8.2.1",
     "serve-favicon": "2.5.0"
-  },
-  "devDependencies": {}
+  }
 }
