--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,7 +22,10 @@
     "unplugin-element-plus": "0.8.0",
     "vite": "5.2.6",
     "vite-plugin-html": "3.2.2",
-    "vue-router": "4.3.0"
+    "vue-router": "4.3.0",
+    "d3": "7.0.0",
+    "echarts": "5.2.2",
+    "mitt": "2.1.0"
   },
   "engines": {
     "node": ">=20.11.0",
